--- a/r2-navigator/build.gradle
+++ b/r2-navigator/build.gradle
@@ -11,7 +11,7 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'com.github.dcendents.android-maven'
-group='com.github.readium'
+group='com.github.zeizeizeiaaa'
 
 android {
 
